# reaper-uf8

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md
analysis/: decode_pot_clusters.py  decode_softkey_leds.py  dump_fx_params.lua  extract_host_to_uf8.sh  gen_init_sequence.py  parse_usbpcap.py  parse_usbpcap_uc1.py  probe_gain_reduction.lua  probe_plugin_state.lua  toggle_ssl_hq_ab.lua
analysis/uc1_decode/: diff_01.summary  diff_01.txt  diff_03.summary  diff_03.txt  diff_04.summary  diff_04.txt  diff_05.summary  diff_05.txt  diff_06.summary  diff_06.txt  diff_07.summary  diff_07.txt  diff_08.summary  diff_08.txt  diff_09.summary  diff_09.txt  diff_10.summary  diff_10.txt  diff_11.summary  diff_11.txt  diff_12.summary  diff_12.txt  diff_13.summary  diff_13.txt  diff_14.summary  diff_14.txt  diff_15.summary  diff_15.txt  diff_16.summary  diff_16.txt  diff_17.summary  diff_17.txt  diff_18.summary  diff_18.txt  diff_19.summary  diff_19.txt  diff_20.summary  diff_20.txt  diff_21.summary  diff_21.txt  (+2 more)
captures/: cap01_baseline_pluginmixer.pcap  cap02_track1_red.pcap  cap03_track1_green.pcap  cap04_track1_blue.pcap  cap06_bankswitch.pcap  cap14-19-pm-zones-plan.md  cap14a_track1_blue_populated.md  cap15_pm_param_cycle.md  cap16_pm_fader_dB.md  cap17_pm_gain_reduction.md  cap18_pm_cs_type.md  cap19_pm_bank_position.md  cap20-21-plan.md  cap23-plan.md  cap24-27-led-brightness-colour-plan.md  cap24_idle_baseline_v2.pcapng  cap25_led_brightness.md  cap25_led_brightness.pcapng  cap26_led_brightness_reverse.md  cap26_led_brightness_reverse.pcapng  cap27_sel_follows_colour.pcapng  cap28_sel_from_reaper.pcapng  cap30_sel_colour_toggle.pcapng  cap31_solo_cut_led_colours.md  cap33_sel_palette_sweep.md  cap41_uf8_softkey_palette.md  cap42_uf8_vpot_top.md  cap43_uc1_bc_vu.md  cap44_uf8_send_plugin_3state.md  cap45_uc1_ff5c.md  cap47_uf8_fader_touch.md  cap48_pages.md  cap49_sendplugin.md  cap50_plugin_top.md  cap51_ssl360_fader8_drag.md  fader8_push.md  fader8_test.md  probe_inj.pcap  uc1_35_menu_buttons.md  uc1_36_gate_gr.md  (+2 more)
captures/led/: README.md
captures/uc1/: README.md  RESUME.md  dual_33_sel_tracks.pcapng  dual_34_colour_change.pcapng  dual_37_lpf_ring.pcapng  dual_38_eq_pots.pcapng  dual_39_dyn_pots.pcapng  dual_40_bc_pots.pcapng  dual_41_io_gain.pcapng  uc1_01_init_clean.md  uc1_01_init_clean.pcapng  uc1_02_idle_baseline.md  uc1_02_idle_baseline.pcapng  uc1_03_plugin_presence.md  uc1_03_plugin_presence.pcapng  uc1_04_knob_threshold_sweep.md  uc1_04_knob_threshold_sweep.pcapng  uc1_05_knob_ratio_steps.md  uc1_05_knob_ratio_steps.pcapng  uc1_06_knob_attack_release.md  uc1_06_knob_attack_release.pcapng  uc1_07_knob_makeup_mix.md  uc1_07_knob_makeup_mix.pcapng  uc1_08_buttons_all.md  uc1_08_buttons_all.pcapng  uc1_09_display_params.md  uc1_09_display_params.pcapng  uc1_10_track_select.md  uc1_10_track_select.pcapng  uc1_11_gr_static.md  uc1_11_gr_static.pcapng  uc1_12_gr_dynamic.md  uc1_12_gr_dynamic.pcapng  uc1_13_vu_meters.md  uc1_13_vu_meters.pcapng  uc1_14_multiple_sc.md  uc1_14_multiple_sc.pcapng  uc1_15_knob_channelstrip_sweep.md  uc1_16_missing_buttons.md  uc1_16_missing_buttons.pcapng  (+26 more)
docs/: architecture-decision.md  bindings.md  buttons-leds-quickref.md  capture-workflow.md  install-macos.md  interop-rationale.md  plan-fx-learn-and-multi-instance.md  plan-plugin-param-mirror.md  plan-settings-ui.md  plugin-ipc-notes.md  protocol-notes-uc1.md  protocol-notes.md  ssl-360-settings-inventory.md  uf8-global-led-map.md  uf8-manual-reference.md  windows-capture-workflow-uc1.md  windows-capture-workflow.md  windows-troubleshooting.md
docs/outreach/: ssl-email-draft.md
docs/ssl-native-params/: README.md  VST3__4K_B.md  VST3__4K_E.md  VST3__SSL_360_Link_(SSL).md  VST3__SSL_360_Link_Bus_Compressor_(SSL).md  VST3__SSL_4K_G_(SSL).md  VST3__SSL_Native_Bus_Compressor_2_(SSL).md  VST3__SSL_Native_Channel_Strip_2_(SSL).md
extension/: CMakeLists.txt
extension/jsfx/: rea_sixty_gr_probe.jsfx
extension/src/: Bindings.cpp  Bindings.h  ColorSync.cpp  ColorSync.h  CsiImport.cpp  CsiImport.h  FocusedParam.cpp  FocusedParam.h  HidDevice.cpp  HidDevice.h  MidiBridge.cpp  MidiBridge.h  MixerLayout.cpp  MixerLayout.h  MixerWindow.cpp  MixerWindow.h  MixerWindow_INTEGRATION.md  Palette.cpp  Palette.h  PluginChunkPatch.cpp  PluginChunkPatch.h  PluginMap.cpp  PluginMap.h  Protocol.cpp  Protocol.h  SettingsScreen.cpp  SettingsScreen.h  ThemeBridge.cpp  ThemeBridge.h  UC1Device.cpp  UC1Device.h  UC1PluginMap.cpp  UC1PluginMap.h  UC1Protocol.cpp  UC1Protocol.h  UC1Surface.cpp  UC1Surface.h  UF8Device.cpp  UF8Device.h  UserPluginCatalog.cpp  (+7 more)
extension/tests/: test_csi_import.cpp  test_protocol.cpp  test_uc1_protocol.cpp
extension/tools/: uf8_color_test.cpp  uf8_hid_probe.cpp  uf8_palette_probe.cpp
